# PolkAssist

./: .gitignore  compose.yml  pyproject.toml
test/crawler/: crawler_functions.py  polka_wiki_crawler.py
test/crawler/urls/: build-index_list.txt  learn-index_list.txt  maintain-index_list.txt
test/use_case/: test_UrlLoader.py  test_embedding.py  test_splitters.py  test_url_loader.py
use_case/: embedding_minilm.py  loader_url.py  split_doc.py
utils/: get_html.py
