[tool.poetry]
name = "polkassist"
version = "0.1.0"
description = ""
authors = ["Giorge Abdala, Felipe G. Martins"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "4.12.2"
selenium = "4.9.0"
requests = "^2.31.0"
sentence-transformers = "^2.2.2"
langchain = "^0.0.308"
torch = {version = "^2.1.0+cpu", source = "pytorch"}
torchvision = {version = "^0.16.0+cpu", source = "pytorch"}
transformers = "^4.34.0"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
