[tool.poetry]
name = "polkassist"
version = "0.1.0"
description = ""
authors = ["Giorge Abdala, Felipe G. Martins"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "4.12.2"
selenium = "4.9.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
